...
        android:text="25:00"
        android:textAlignment="center"
        android:textSize="56sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="360dp"
        android:text="Start" />

...
        android:layout_marginTop="165dp"
        android:textAlignment="center"
        android:text="@string/greeting_pomodoro_session"
        android:textSize="18sp" />

    <Button
        android:id="@+id/viewProjectsButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="450dp"
        android:text="View Projects" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="360dp"
        android:text="Reset" />

...
