...
            android:layout_marginLeft="14dp"
            android:layout_marginTop="20dp"
            android:text="Project Name"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/projectNameField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:ems="10"
            android:inputType="text"
            android:text="" />
...
            <Button
                android:id="@+id/updateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Update" />
            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delete" />

            <TextView
                android:id="@+id/reportTitle"
...
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>

            <CheckBox
                android:id="@+id/checkbox_includePomodoros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_opt_incl_pom" />

            <CheckBox
                android:id="@+id/checkbox_includeHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_opt_incl_total_hours" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="303dp"
...
                    android:hint="Time"
                    android:textSize="18sp" />
            </LinearLayout>


            <Button
                android:id="@+id/reportButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="View Report" />



...
