...
            <TextView
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text= "number"
                android:id="@+id/completedPomodoros"
                />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
            <TextView
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text= "number"
                android:id="@+id/totalHoursWorked"
                />
        </LinearLayout>

        <TextView
            android:layout_marginHorizontal="7dp"
            android:textSize="39sp"
...
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray"/>
        <ListView
            android:id="@+id/reportSessionList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:layout_below="@+id/reportInfo"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />
...
