...
    <string name="confirm_delete_project_with_hours"> The current project has time worked associated with it. Do you still want to delete it?</string>
    <string name="confirm_associated_pomodoro_with_projects"> Do you want to associate this Pomodoro with a project?</string>
    <string name="error_user_not_found">The user does not exist.</string>

    <string name="report_opt_incl_pom">Include completed Pomodoros</string>
    <string name="report_opt_incl_total_hours">Include total hours worked on project</string>
    <string name="error_report_not_found">User or project not found.</string>

    <string name="greeting_pomodoro_session">start to select a project</string>
</resources>

